src/styles/globals/_footer.css
.footer {
    --footer-bg-color: var(--color-font-dark);
    --footer-padding: var(--spacing-xl) var(--spacing-normal);

    --footer-list-style: none;
    --footer-list-padding: 0;
    --footer-list-margin: 0;
    --footer-list-text-align: left;

    --footer-logo-max-width: 180px;
    --footer-object-fit: contain;
    --footer-object-position: top;

    --footer-link-color: var(--color-bg);
    --footer-link-hover-color: var(--color-primary-light);
    --footer-link-focus-color: var(--color-primary-light);

    --footer-list-link-text-decoration: underline;

    --footer-address-color: var(--color-bg);
    --footer-address-margin-bottom: var(--spacing-l);

    --footer-address-text-style: normal;
    --footer-address-text-margin: 0;
    --footer-address-text-align: left;
    --footer-address-text-display: flex;
    --footer-address-text-flex-direction: row;
    --footer-address-text-align-items: center;
    --footer-address-text-justify-content: flex-start;
    --footer-address-text-gap: var(--spacing-normal);

    --footer-socials-display: flex;
    --footer-socials-align-items: center;
    --footer-socials-justify-content: center;
    --footer-socials-gap: var(--spacing-normal);

    --footer-social-link-size: var(--spacing-l);
    --footer-social-link-border-radius: var(--border-radius-default);

    background-color: var(--footer-bg-color);
    padding: var(--footer-padding);
    container-name: footer;
    container-type: inline-size;
}

.footer__logo {
    max-width: var(--footer-logo-max-width);
    object-fit: var(--footer-object-fit);
    object-position: var(--footer-object-position);
}

.footer__list {
    list-style: var(--footer-list-style);
    padding: var(--footer-list-padding);
    margin: var(--footer-list-margin);
    text-align: var(--footer-list-text-align);
}

.footer__list-link,
.footer__address-link {
    color: var(--footer-link-color);
    text-decoration: var(--footer-list-link-text-decoration);
}

.footer__socials-link {
    height: var(--footer-social-link-size);
    width: var(--footer-social-link-size);
    color: var(--footer-link-color);
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: var(--footer-social-link-border-radius);
}

.footer__list-item > a.footer__list-link:is(:hover, :focus-visible),
.footer__address-text > a.footer__address-link:is(:hover, :focus-visible) {
    color: var(--footer-link-focus-color);
}

.footer__socials > a.footer__socials-link:is(:hover, :focus-visible) {
    background-color: var(--footer-link-focus-color);
    color: var(--footer-bg-color);
}

.footer__address {
    margin-bottom: var(--footer-address-margin-bottom);
}

.footer__address-title {
    font-family: var(--font-family-headline);
}

.footer__address-title,
.footer__address-text {
    color: var(--footer-address-color);
    margin: var(--footer-address-text-margin);
    text-align: var(--footer-address-text-align);
    font-style: var(--footer-address-text-style);
}

.footer__address-text {
    display: var(--footer-address-text-display);
    flex-direction: var(--footer-address-text-flex-direction);
    align-items: var(--footer-address-text-align-items);
    justify-content: var(--footer-address-text-justify-content);
    gap: var(--footer-address-text-gap);
}

/* stylelint-disable-next-line max-line-length */
:is(.footer__address-text--name, .footer__address-text--city, .footer__address-text--street) + :is(.footer__address-text--phone, .footer__address-text--fax, .footer__address-text--mail) {
    margin-top: var(--footer-address-margin-bottom);
}

/* stylelint-disable-next-line max-line-length */
:is(.footer__address-text--phone, .footer__address-text--fax, .footer__address-text--mail) + :is(.footer__address-text--phone, .footer__address-text--fax, .footer__address-text--mail) {
    margin-top: var(--spacing-s);
}

.footer__socials {
    display: var(--footer-socials-display);
    align-items: var(--footer-socials-align-items);
    justify-content: var(--footer-socials-justify-content);
    gap: var(--footer-socials-gap);
}

